[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/game.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/MajorMonoDisplay-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "text_anim"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="ui" type="CanvasLayer"]

layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="bg" type="Polygon2D" parent="." index="0"]

polygon = PoolVector2Array( -1.84277, -4.75256, 959.831, -1.23639, 961.589, 542.012, -0.0846558, 543.771 )
uv = PoolVector2Array(  )
color = Color( 0.320435, 0.488281, 0.484347, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="game" parent="." index="1" instance=ExtResource( 2 )]

[node name="label" type="Label" parent="." index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_top = 230.0
margin_right = 903.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "play again?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause", "Visibility", "custom_fonts" ]

[node name="anim" type="AnimationPlayer" parent="." index="3"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 0.5
anims/text_anim = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="start_timer" type="Timer" parent="." index="4"]

pause_mode = 1
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="end_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="restart" type="CanvasLayer" parent="." index="6"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="play_button" type="TextureButton" parent="restart" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 376.0
margin_top = 308.0
margin_right = 880.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Mouse", "Pause", "Textures", "Visibility" ]

[connection signal="start_over" from="." to="game" method="_on_game_reset"]

[connection signal="start_over" from="." to="game" method="_on_ui_start_over"]

[connection signal="game_over" from="game" to="." method="_on_interactive_game_over"]

[connection signal="win" from="game" to="." method="_on_game_win"]

[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]

[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_timeout"]

[connection signal="button_down" from="restart/play_button" to="." method="_on_play_button_down"]


